# chess_engine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml
STS-Rating-master/: sts_rating.py
STS-Rating-master/tools/: analyze.py
assets/benchmarks/: baseline-0.0.1.json  baseline-0.0.2-long.json  baseline-0.0.2.json  baseline-0.0.3-pinned.json  baseline-0.0.3.json  baseline-20250929.json  endgames-0.0.3-prof-thr100.json  endgames-0.0.3-prof-thr50.json  endgames-0.0.3-prof-thr75.json  endgames-0.0.3-prof.json  endgames-0.0.3-prof2.json  positions.json  positions_endgames.json
docs/: AGENTS.md  chess-frontend-integration.md  engine-status-report.md  frontend_vision.md  openapi.yaml
docs/plans/: meta-plan.md  plan-01-api-contract-and-scaffolding.md  plan-02-board-representation-and-fen.md  plan-03-move-generation-and-perft.md  plan-04-evaluation-and-minimal-search.md  plan-05-http-api-and-sessions.md  plan-06-tooling-tests-and-ci.md  plan-07-performance-and-search-features.md  plan-08-uci-and-cli.md
scripts/: STS_TEST_RUNNER_PLAN.md  bench.py  bench_diff.py  perft.py  run_sts.py
src/: AGENTS.md  __init__.py
src/assets/: __init__.py
src/cli/: __init__.py  main.py  uci.py
src/engine/: __init__.py  board.py  game.py  move.py  perft.py  zobrist.py
src/eval/: __init__.py
src/protocol/: __init__.py
src/search/: __init__.py  service.py
tests/: AGENTS.md  conftest.py
tests/engine/: test_apply.py  test_castling.py  test_en_passant.py  test_fen.py  test_make_unmake.py  (+9 more)
(+37 files in other folders)
