[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-engine"
version = "0.0.2"
description = "API-first chess engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Authors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.22",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "black",
  "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
